--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "truffle": "^5.11.5",
     "typescript": "^4.9.5",
