--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "etherscan-api": "^10.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
