--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "antd": "^5.18.0",
     "etherscan-api": "^10.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
